# chips-get

./: .gitignore  LICENSE  README.md
CPP/OpenCV_OCR_Demo/: CMakeLists.txt  rec.cpp
c/: delay.c  delay2.c  jiechen.c  jincheng2.c  jincheng3.c  jincheng5.c  jincheng6.c  learn_guile_1.c  script.scm  test3.c  test4.c  test5.c  test6.c
clisp/: learn_1.lisp  learn_2.lisp
elisp/: use_1.el  use_2.el  use_3.el
go/: board.go  dup1.go  dup2.go  dup3.go  echo1.go  echo2.go  echo3.go  echo4.go  fetch.go  fetchall.go  fetchall_2.go  goroutine_chan.go  hello_world  hello_world.go  lissajous.go  server1.go  server2.go  server3.go  server4.go  simulated_blocking.go  use_goroutine.go
javascript/: constructor.js  constructor2.js  constructor3.js  http-request.js  learn_1.js  send-a-image-to-clent.js  test_asyn_dir_change.js  test_asyn_exec.js  test_err_callback.js  test_export.js  test_export_2.js  test_global.js  test_last_callback_functionality.js  test_promise_1.js  test_promise_2.js  test_promise_3.js  test_promise_4_dir_change.js  test_sequential_exec.js  test_socket.js  test_socket_client.js  test_socket_pipe_client.js  test_socket_pipe_server.js  test_stdin_stdout.js
julia/: learn_1.jl
python3/: .#udp_client.py  antColonyAlgorithm.py  blur.py  check_prime.py  check_prime.py.lprof  ex1.py  ex2.py  ex3.py  ex4.py  learn_PIL_simple_use.py  one-line-print.py  plot_on_image.py  profile.status  see_array_of_image.py  turn_upper_suffix.py  udp_client.py  use_imtools.py
shell/: ab  abe  count_char.sh  count_char2.sh  example.txt  example2.txt  finduser  fixup.sed  get_days.sh  (+13 more)
(+198 files in other folders)
